--- a/app/src/main/res/layout/activity_notepad.xml
+++ b/app/src/main/res/layout/activity_notepad.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/bgColor"
-    tools:context=".notepad">
+    tools:context=".Notepad">
 
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/note_toolbar"
@@ -22,7 +22,7 @@
         android:layout_height="wrap_content"
         android:text="Notes"
         android:textColor="@color/white"
-        android:textSize="32sp"
+        android:textSize="28sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/note_toolbar"
         app:layout_constraintEnd_toEndOf="@+id/note_toolbar"
