--- a/app/src/main/res/layout/activity_timer.xml
+++ b/app/src/main/res/layout/activity_timer.xml
@@ -4,16 +4,29 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".timer">
+    android:background="@color/bgColor"
+    tools:context=".Timer">
 
     <com.google.android.material.appbar.MaterialToolbar
-        android:id="@+id/timerToolbar"
+        android:id="@+id/timer_toolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/black"
+        android:layout_height="?attr/actionBarSize"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Pomodoro"
+        android:textColor="@color/white"
+        android:textSize="28sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/timer_toolbar"
+        app:layout_constraintEnd_toEndOf="@+id/timer_toolbar"
+        app:layout_constraintStart_toStartOf="@+id/timer_toolbar"
+        app:layout_constraintTop_toTopOf="@+id/timer_toolbar" />
 
 
     <ProgressBar
@@ -45,16 +58,24 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Work"
-            android:textColor="@color/black"
-            android:textSize="30sp"
+            android:textColor="@color/white"
+            android:textSize="26sp"
             />
         <TextView
             android:id="@+id/timer_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="0:00:0"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="45sp"
+            />
+        <TextView
+            android:id="@+id/timer_cycle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Cycle: 1"
+            android:textColor="@color/white"
+            android:textSize="20sp"
             />
     </LinearLayout>
 
@@ -81,11 +102,12 @@
             android:paddingHorizontal="16dp"
             android:paddingVertical="10dp"
             android:text="Start"
+            android:textAlignment="center"
             android:textSize="20sp"
             app:cornerRadius="100dp"
             app:icon="@drawable/ic_play"
-            app:iconTint="@color/black"
-            app:strokeColor="@color/black"
+            app:iconTint="@color/colorPrimary"
+            app:strokeColor="@color/colorPrimary"
             app:strokeWidth="2dp" />
 
         <com.google.android.material.button.MaterialButton
@@ -98,17 +120,18 @@
             android:paddingHorizontal="16dp"
             android:paddingVertical="10dp"
             android:text="Reset"
+            android:textAlignment="center"
             android:textSize="20sp"
             app:cornerRadius="100dp"
             app:icon="@drawable/ic_reset"
-            app:iconTint="@color/black"
-            app:strokeColor="@color/black"
+            app:iconTint="@color/colorPrimary"
+            app:strokeColor="@color/colorPrimary"
             app:strokeWidth="2dp" />
 
     </LinearLayout>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/floating_action_button"
+        android:id="@+id/fab_setupTimer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
