--- a/app/src/main/res/layout/note_create_activity.xml
+++ b/app/src/main/res/layout/note_create_activity.xml
@@ -4,104 +4,85 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#292929"
-    tools:context=".NoteActivities.noteCreateActivity">
+    android:background="@color/bgColor"
+    tools:context=".NoteActivities.NoteCreateActivity">
+
+    <com.google.android.material.appbar.MaterialToolbar
+        android:id="@+id/noteCreate_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        app:menu="@menu/toolbar_menu" />
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="?attr/actionBarSize"
+        android:layout_marginBottom="@dimen/_40sdp"
         android:clipToPadding="false">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:animateLayoutChanges="true">
-
-            <ImageView
-                android:id="@+id/noteGoBack"
-                android:layout_width="@dimen/_30sdp"
-                android:layout_height="@dimen/_30sdp"
-                android:layout_marginStart="@dimen/_6sdp"
-                android:layout_marginTop="@dimen/_20sdp"
-                android:layout_marginEnd="@dimen/_12sdp"
-                android:contentDescription="@string/app_name"
-                android:src="@drawable/ic_arrow_left"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:tint="@color/colorIcons" />
-
-            <ImageView
-                android:id="@+id/imageSave"
-                android:layout_width="@dimen/_20sdp"
-                android:layout_height="@dimen/_20sdp"
-                android:layout_marginEnd="@dimen/_12sdp"
-                android:background="@drawable/background_done_button"
-                android:contentDescription="@string/app_name"
-                android:padding="@dimen/_4sdp"
-                android:src="@drawable/ic_done"
-                app:layout_constraintBottom_toBottomOf="@id/noteGoBack"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@id/noteGoBack"
-                app:tint="@color/colorIcons" />
+            android:padding="12dp">
 
             <EditText
                 android:id="@+id/inputNoteTitle"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/_35sdp"
-                android:layout_marginStart="@dimen/_12sdp"
-                android:layout_marginTop="@dimen/_15sdp"
-                android:layout_marginEnd="@dimen/_12sdp"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="12dp"
                 android:background="@null"
                 android:fontFamily="@font/roboto_slab_bold"
-                android:hint="@string/noteNoteTitle"
+                android:hint="Note Title"
                 android:imeOptions="actionDone"
                 android:importantForAutofill="no"
                 android:includeFontPadding="false"
                 android:inputType="text"
+                android:padding="12dp"
                 android:textColor="@color/colorWhite"
                 android:textColorHint="@color/colorTextHint"
-                android:textSize="@dimen/_16ssp"
-                app:layout_constraintTop_toBottomOf="@id/noteGoBack" />
+                android:textSize="24sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/textDateTime"
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/yantramanav"
-                android:includeFontPadding="false"
                 android:textColor="@color/colorIcons"
-                android:textSize="@dimen/_10ssp"
-                app:layout_constraintEnd_toEndOf="@id/inputNoteTitle"
-                app:layout_constraintStart_toStartOf="@id/inputNoteTitle"
+                android:layout_marginVertical="12dp"
+                android:paddingHorizontal="12dp"
+                android:text="EEEE, dd MMMM yyyy HH:mm a"
+                android:textSize="14sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/inputNoteTitle" />
 
             <EditText
                 android:id="@+id/inputNoteSubtitle"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/_12sdp"
-                android:layout_marginTop="@dimen/_15sdp"
-                android:layout_marginEnd="@dimen/_12sdp"
+                android:layout_marginStart="12dp"
+                android:layout_marginTop="12dp"
                 android:background="@null"
                 android:fontFamily="@font/yantramanav"
-                android:hint="@string/noteNoteSubtitle"
+                android:hint="Note subtitle"
                 android:importantForAutofill="no"
-                android:includeFontPadding="false"
                 android:inputType="textMultiLine"
-                android:paddingTop="@dimen/_8sdp"
-                android:paddingBottom="@dimen/_8sdp"
+                android:padding="12dp"
                 android:textColor="@color/colorTextSubtitle"
                 android:textColorHint="@color/colorTextHint"
-                android:textSize="@dimen/_13ssp"
+                android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/ViewSubtitleIndicator"
                 app:layout_constraintTop_toBottomOf="@id/textDateTime" />
 
             <View
                 android:id="@+id/ViewSubtitleIndicator"
-                android:layout_width="@dimen/_5sdp"
+                android:layout_width="6dp"
                 android:layout_height="0dp"
-                android:layout_marginStart="@dimen/_12sdp"
                 android:background="@drawable/background_subtitle_indicator"
                 app:layout_constraintBottom_toBottomOf="@id/inputNoteSubtitle"
                 app:layout_constraintStart_toStartOf="parent"
@@ -172,22 +153,20 @@
                 android:id="@+id/inputNote"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/_12sdp"
-                android:layout_marginTop="@dimen/_15sdp"
-                android:layout_marginEnd="@dimen/_12sdp"
-                android:layout_marginBottom="@dimen/_15sdp"
                 android:background="@null"
                 android:fontFamily="@font/yantramanav"
+                android:layout_marginVertical="12dp"
+                android:hint="Write note here"
                 android:gravity="top"
-                android:hint="@string/noteTypeNote"
-                android:importantForAutofill="no"
-                android:includeFontPadding="false"
                 android:inputType="textMultiLine"
-                android:minHeight="@dimen/_100sdp"
                 android:textColor="@color/colorWhite"
+                android:minHeight="400dp"
+                android:padding="12dp"
                 android:textColorHint="@color/colorTextHint"
-                android:textSize="@dimen/_13ssp"
+                android:textSize="16sp"
                 app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/layoutWebURL" />
 
 
