--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -69,7 +69,7 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="@string/filler"
+                        android:text="@string/about"
                         android:textColor="@color/black"
                         android:textSize="18sp" />
 
@@ -103,7 +103,7 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="@string/filler"
+                        android:text="@string/team"
                         android:textColor="@color/black"
                         android:textSize="18sp" />
 
