--- a/app/src/main/res/layout/activity_notepad.xml
+++ b/app/src/main/res/layout/activity_notepad.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/bgColor"
-    tools:context=".Notepad">
+    tools:context=".Notes.NotesActivity">
 
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/note_toolbar"
@@ -41,7 +41,7 @@
         app:layout_constraintTop_toBottomOf="@+id/note_toolbar">
 
         <EditText
-            android:id="@+id/inputSearch"
+            android:id="@+id/noteSearch"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@null"
@@ -55,25 +55,26 @@
             android:padding="16dp"
             android:textColor="@color/colorWhite"
             android:textColorHint="@color/colorTextHint"
-            android:textSize="@dimen/_13ssp" />
+            android:textSize="16sp" />
     </com.google.android.material.card.MaterialCardView>
 
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/notesRecyclerView"
+        android:id="@+id/note_recyclerview"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginTop="20dp"
         android:alwaysDrawnWithCache="true"
         android:clipToPadding="false"
         android:padding="8dp"
         android:scrollbars="none"
         android:scrollingCache="true"
         android:smoothScrollbar="true"
+        app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/searchCard" />
+        app:layout_constraintTop_toBottomOf="@+id/searchCard"
+        app:spanCount="2" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab_addNote"
