--- a/app/src/main/res/layout/activity_timer.xml
+++ b/app/src/main/res/layout/activity_timer.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/bgColor"
-    tools:context=".Timer">
+    tools:context=".Timer.Timer">
 
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/timer_toolbar"
@@ -81,7 +81,7 @@
 
     <LinearLayout
 
-        android:id="@+id/linearLayout"
+        android:id="@+id/noteColorPicker"
         android:weightSum="2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -144,7 +144,7 @@
         app:cornerRadius="100dp"
         app:icon="@drawable/ic_alarm"
         app:iconTint="@color/colorPrimary"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
+        app:layout_constraintTop_toBottomOf="@+id/noteColorPicker"
         app:strokeColor="@color/colorPrimary"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
