--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -20,4 +20,11 @@
         <item name="android:windowSoftInputMode">adjustResize</item>
     </style>
 
+    <!--Custom single choice alert dialog-->
+    <style name="CustomAlertDialog" parent="ThemeOverlay.MaterialComponents.Dialog.Alert">
+        <!-- Used for the title and text -->
+        <item name="android:textColor">@color/white</item>
+        <!-- Used for the background -->
+        <item name="android:background">@color/bgColor</item>
+    </style>
 </resources>
