--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,9 +14,9 @@
     <color name="disabledColor">#4C4C51</color>
 
 
-    <!--<! Notepad Colors__>-->
+    <!--<! NotesActivity Colors__>-->
     <color name="colorSearchIcon">#dbdbdb</color>
-    <color name="colorTextHint">#7b7b7b</color>
+    <color name="colorTextHint">#CAC8C8</color>
     <color name="colorQuickActionsBackground">#2f2d2e</color>
     <color name="colorIcons">#a4a4a4</color>
     <color name="colorTextSubtitle">#cecece</color>
