--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,10 +13,18 @@
         <item name="android:statusBarColor" tools:targetApi="l">@color/bgColor</item>
         <!-- Customize your theme here. -->
     </style>
+
     <style name="DialogStyle" parent="Theme.Design.BottomSheetDialog">
         <item name="android:windowIsFloating">false</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
         <item name="android:windowSoftInputMode">adjustResize</item>
     </style>
 
+    <!--Custom single choice alert dialog-->
+    <style name="CustomAlertDialog" parent="ThemeOverlay.MaterialComponents.Dialog.Alert">
+        <!-- Used for the title and text -->
+        <item name="android:textColor">@color/white</item>
+        <!-- Used for the background -->
+        <item name="android:background">@color/bgColor</item>
+    </style>
 </resources>
